@@ -1,0 +1,22 @@
+<?php
+// Autogenerated PersistentObject definition
+
+$def = new ezcPersistentObjectDefinition();
+$def->table = 'liveuser_translations_string_id';
+$def->class = 'liveuser_translations_string_id';
+
+$def->properties['name']               = new ezcPersistentObjectProperty();
+$def->properties['name']->columnName   = 'name';
+$def->properties['name']->propertyName = 'name';
+$def->properties['name']->propertyType = ezcPersistentObjectProperty::PHP_TYPE_STRING;
+
+
+$def->idProperty               = new ezcPersistentObjectIdProperty();
+$def->idProperty->columnName   = 'translation_id';
+$def->idProperty->propertyName = 'translation_id';
+$def->idProperty->generator    = new ezcPersistentGeneratorDefinition( 'ezcPersistentManualGenerator' );
+$def->idProperty->propertyType = ezcPersistentObjectProperty::PHP_TYPE_STRING;
+
+return $def;
+
+?>
